// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile should render correctly 1`] = `
<div
  className="sc-ifAKCX fCOKVk user-profile"
>
  <div
    className="sc-bZQynM IPjfS"
  >
    <img
      alt="my-image"
      className="user-img"
      src={Object {}}
    />
    <div
      className="sc-htoDjs coVPzq"
    >
      username
    </div>
    <button
      className="figma-btn dark upload-button mb-16"
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="upload-outline"
          data-eva-fill="#fff"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      <input
        accept="image/*"
        className="file-input form-control-file"
        id="picture"
        name="structure"
        onChange={[Function]}
        type="file"
      />
      Modifier ma photo
    </button>
    <div
      className="sc-dnqmqq fpPJtu"
    >
      Votre photo apparaîtra sur les fiches auxquelles vous allez contribuer.
    </div>
  </div>
  <div
    className="sc-EHOje cAROQj"
  >
    <div
      className="sc-iwsKbI KxuZj"
    >
      Votre pseudonyme
    </div>
    <div
      className="sc-gqjmRU etyENR"
    >
      <div
        className="sc-gZMcBi brnAdC"
      >
        <div
          className="mb-10 figma-input-group input-group"
        >
          <div
            className="icon-prepend input-group-prepend"
          >
            <span>
              <i
                data-eva="person-outline"
                data-eva-fill="#212121"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
          </div>
          <input
            autoFocus={false}
            className=" has-prepend new-size form-control"
            id="username"
            onChange={[Function]}
            type="text"
            value="username"
          />
        </div>
      </div>
      <div>
        <button
          className="figma-btn validate-light ml-8"
          disabled={true}
          onClick={[Function]}
          testID="test-save-pseudo"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Enregistrer
        </button>
      </div>
    </div>
    <div
      className="sc-dnqmqq fpPJtu"
    >
      Ce pseudonyme est public. Il apparaître sur les fiches auxquelles vous allez contribuer.
    </div>
    <div
      className="sc-iwsKbI fugsZw"
    >
      Votre email
    </div>
    <div
      className="sc-gqjmRU etyENR"
    >
      <div
        className="sc-gZMcBi brnAdC"
      >
        <div
          className="mb-10 figma-input-group input-group"
        >
          <div
            className="icon-prepend input-group-prepend"
          >
            <span>
              <i
                data-eva="email-outline"
                data-eva-fill="#212121"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
          </div>
          <input
            autoFocus={false}
            className=" has-prepend new-size form-control"
            id="email"
            onChange={[Function]}
            placeholder="Renseignez votre adresse email"
            type="text"
            value="email@gmail.com"
          />
        </div>
      </div>
      <div>
        <button
          className="figma-btn validate-light ml-8"
          disabled={true}
          onClick={[Function]}
          testID="test-save-email"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Enregistrer
        </button>
      </div>
    </div>
    <div
      className="sc-dnqmqq fpPJtu"
    >
      Votre email sera utilisé seulement en cas de réinitialisation de votre mot de passe et pour des notifications liées à votre activité sur le site.
    </div>
    <div
      className="sc-iwsKbI fugsZw"
    >
      Votre mot de passe
    </div>
    <button
      className="figma-btn dark "
      onClick={[Function]}
      testID="test-modify-password"
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="edit-outline"
          data-eva-fill="#fff"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Modifier mon mot de passe
    </button>
  </div>
</div>
`;

exports[`UserProfile should render correctly when changing password 1`] = `
<div
  className="sc-ifAKCX fCOKVk user-profile"
>
  <div
    className="sc-bZQynM IPjfS"
  >
    <img
      alt="my-image"
      className="user-img"
      src={Object {}}
    />
    <div
      className="sc-htoDjs coVPzq"
    >
      username
    </div>
    <button
      className="figma-btn dark upload-button mb-16"
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="upload-outline"
          data-eva-fill="#fff"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      <input
        accept="image/*"
        className="file-input form-control-file"
        id="picture"
        name="structure"
        onChange={[Function]}
        type="file"
      />
      Modifier ma photo
    </button>
    <div
      className="sc-dnqmqq fpPJtu"
    >
      Votre photo apparaîtra sur les fiches auxquelles vous allez contribuer.
    </div>
  </div>
  <div
    className="sc-EHOje cAROQj"
  >
    <div
      className="sc-iwsKbI KxuZj"
    >
      Votre pseudonyme
    </div>
    <div
      className="sc-gqjmRU etyENR"
    >
      <div
        className="sc-gZMcBi brnAdC"
      >
        <div
          className="mb-10 figma-input-group input-group"
        >
          <div
            className="icon-prepend input-group-prepend"
          >
            <span>
              <i
                data-eva="person-outline"
                data-eva-fill="#212121"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
          </div>
          <input
            autoFocus={false}
            className=" has-prepend new-size form-control"
            id="username"
            onChange={[Function]}
            type="text"
            value="username"
          />
        </div>
      </div>
      <div>
        <button
          className="figma-btn validate-light ml-8"
          disabled={true}
          onClick={[Function]}
          testID="test-save-pseudo"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Enregistrer
        </button>
      </div>
    </div>
    <div
      className="sc-dnqmqq fpPJtu"
    >
      Ce pseudonyme est public. Il apparaître sur les fiches auxquelles vous allez contribuer.
    </div>
    <div
      className="sc-iwsKbI fugsZw"
    >
      Votre email
    </div>
    <div
      className="sc-gqjmRU etyENR"
    >
      <div
        className="sc-gZMcBi brnAdC"
      >
        <div
          className="mb-10 figma-input-group input-group"
        >
          <div
            className="icon-prepend input-group-prepend"
          >
            <span>
              <i
                data-eva="email-outline"
                data-eva-fill="#212121"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
          </div>
          <input
            autoFocus={false}
            className=" has-prepend new-size form-control"
            id="email"
            onChange={[Function]}
            placeholder="Renseignez votre adresse email"
            type="text"
            value="email@gmail.com"
          />
        </div>
      </div>
      <div>
        <button
          className="figma-btn validate-light ml-8"
          disabled={true}
          onClick={[Function]}
          testID="test-save-email"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Enregistrer
        </button>
      </div>
    </div>
    <div
      className="sc-dnqmqq fpPJtu"
    >
      Votre email sera utilisé seulement en cas de réinitialisation de votre mot de passe et pour des notifications liées à votre activité sur le site.
    </div>
    <div
      className="sc-iwsKbI fugsZw"
    >
      Votre mot de passe
    </div>
    <div
      className="sc-gZMcBi brnAdC"
    >
      <div
        className="mb-10 figma-input-group input-group"
      >
        <div
          className="icon-prepend input-group-prepend"
        >
          <span>
            <i
              data-eva="lock-outline"
              data-eva-fill="#212121"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        <input
          autoFocus={true}
          className="password-input has-prepend new-size form-control"
          id="current-password"
          onChange={[Function]}
          placeholder="Votre mot de passe actuel"
          type="password"
          value=""
        />
        <div
          className="icon-append input-group-append"
          onClick={[Function]}
        >
          <span>
            <i
              data-eva="eye-outline"
              data-eva-fill="#212121"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      className="sc-gZMcBi brnAdC"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <div
          style={
            Object {
              "marginTop": "10px",
              "width": "480px",
            }
          }
        >
          <div
            className="mb-10 figma-input-group input-group"
          >
            <div
              className="icon-prepend input-group-prepend"
            >
              <span>
                <i
                  data-eva="lock-outline"
                  data-eva-fill="#212121"
                  data-eva-height="20px"
                  data-eva-width="20px"
                />
              </span>
            </div>
            <input
              autoComplete="new-password"
              autoFocus={false}
              className="password-input has-prepend new-size form-control"
              id="new-password"
              onChange={[Function]}
              placeholder="Votre nouveau mot de passe"
              type="password"
            />
            <div
              className="icon-append input-group-append"
              onClick={[Function]}
            >
              <span>
                <i
                  data-eva="eye-outline"
                  data-eva-fill="#212121"
                  data-eva-height="20px"
                  data-eva-width="20px"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      
      
    </div>
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginTop": "16px",
        }
      }
    >
      <button
        className="figma-btn validate-light "
        disabled={true}
        onClick={[Function]}
        testID="test-save-password"
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="checkmark-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Enregistrer
      </button>
    </div>
  </div>
</div>
`;

exports[`UserProfile should render correctly when loading 1`] = `
<div
  className="sc-ifAKCX fCOKVk"
>
  <div
    className="sc-bZQynM IPjfS"
  >
    <div
      className="sc-bxivhb qoQiV"
    />
    <div
      className="css-dzpd50-SkeletonTheme"
    >
      <span>
        <span
          className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style={
            Object {
              "height": 20,
              "width": 160,
            }
          }
        >
          ‌
        </span>
      </span>
    </div>
  </div>
  <div
    className="sc-EHOje cAROQj"
  >
    <div
      className="sc-iwsKbI KxuZj"
    >
      Votre pseudonyme
    </div>
    <div
      className="css-dzpd50-SkeletonTheme"
    >
      <span>
        <span
          className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style={
            Object {
              "height": 50,
            }
          }
        >
          ‌
        </span>
      </span>
    </div>
    <div
      className="sc-iwsKbI fugsZw"
    >
      Votre email
    </div>
    <div
      className="css-dzpd50-SkeletonTheme"
    >
      <span>
        <span
          className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style={
            Object {
              "height": 50,
            }
          }
        >
          ‌
        </span>
      </span>
    </div>
    <div
      className="sc-iwsKbI fugsZw"
    >
      Votre mot de passe
    </div>
    <div
      className="css-dzpd50-SkeletonTheme"
    >
      <span>
        <span
          className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style={
            Object {
              "height": 50,
            }
          }
        >
          ‌
        </span>
      </span>
    </div>
  </div>
</div>
`;
